--- a/packages/front/src/components/style/global.scss
+++ b/packages/front/src/components/style/global.scss
@@ -1,25 +1,34 @@
+/** reset */
 @import-normalize;
 
-
-/** 变量 */
-$black: #000;
-$text-color: fade($black, 85%);
 $font-size-base: 14px;
 $font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
   'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
   'Noto Color Emoji';
 $font-variant-base: tabular-nums;
 $line-height-base: 1.5715;
-$body-background: #fff;
 $font-feature-settings-base: 'tnum';
 
 body {
+  writing-mode: horizontal-tb;
   margin: 0;
+  background-color: $background-black;
   color: $text-color;
   font-size: $font-size-base;
   font-family: $font-family;
   font-variant: $font-variant-base;
   line-height: $line-height-base;
-  background-color: $body-background;
   font-feature-settings: $font-feature-settings-base;
+}
+
+ol, ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+a{
+  text-decoration: none;
+  transition: color .3s ease;
+  background-color: transparent;
+  outline: none;
 }
