--- a/packages/front/src/components/style/theme.scss
+++ b/packages/front/src/components/style/theme.scss
@@ -28,8 +28,7 @@ $title-color: #FEFEFF;
   box-shadow: 0px 0px 145px * $multiple 0px rgba(17, 22, 47, 0.25);
   border-radius: 15px * $multiple;
 }
-@mixin box-container($width, $height) { 
-  width:$width * $multiple;
+@mixin box-container($height) { 
   height: $height * $multiple;
   background-color: $box-black;
   box-shadow: 0px 0px 145px * $multiple 0px rgba(17, 21, 47, 0.25);
