--- a/packages/front/src/page/trafficindex/style.module.scss
+++ b/packages/front/src/page/trafficindex/style.module.scss
@@ -1,14 +1,28 @@
-.left-container{
+.container{
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: stretch;
-  width: 1221px * $multiple;
   height: $screen-height;
-  float: left;
-}
-.middle-container{
-  width: 2293px * $multiple;
-  height: $screen-height;
-  float: left;
+
+  $left-width: 1221px * $multiple;
+  $middle-width: 2293px * $multiple;
+
+  // 有 echarts 图，布局元素需要定宽
+  .left{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: stretch;
+    flex: 0 0 $left-width;
+    float: left;
+  }
+  // 为了写动画时方便位置定位，使用固定的宽度
+  .middle{
+    flex: 0 0 $middle-width;
+    float: left;
+  }
+  // 有 echarts 图，布局元素需要定宽。这里用 calc 实现剩余部分的宽度适配布局
+  .right{
+    flex: 0 0 calc(100% - #{$left-width + $middle-width});
+  }
 }
