--- a/packages/front/src/components/style/theme.scss
+++ b/packages/front/src/components/style/theme.scss
@@ -27,12 +27,11 @@ $title-color: #FEFEFF;
 @mixin box-shadow { 
   box-shadow: 0px 0px 145px * $multiple 0px rgba(17, 22, 47, 0.25);
   border-radius: 15px * $multiple;
+  background-color: $box-black;
 }
 @mixin box-container($height) { 
   height: $height * $multiple;
-  background-color: $box-black;
-  box-shadow: 0px 0px 145px * $multiple 0px rgba(17, 21, 47, 0.25);
-  border-radius: 15px * $multiple;
+  @include box-shadow;
 }
 
 *{
