--- a/packages/front/src/page/trafficindex/road/style.module.scss
+++ b/packages/front/src/page/trafficindex/road/style.module.scss
@@ -60,6 +60,7 @@
         }
       }
       .tip{
+        margin-top: 7.5px * $multiple;
         display: flex;
         justify-content: space-between;
 
