--- a/packages/front/src/components/logo/style.module.scss
+++ b/packages/front/src/components/logo/style.module.scss
@@ -30,11 +30,12 @@
 
       width: $squre;
       height: $squre;
-      background-color:$secondary-color;
+      // background-color:$secondary-color;
+      background-color: $main-color;;
     }
   }
   .user{
-    color: $main-color;
+    color: $text-color;
     font-size: 38px * $multiple;
   }
   .desc{
