--- a/packages/front/src/components/style/theme.scss
+++ b/packages/front/src/components/style/theme.scss
@@ -22,6 +22,7 @@ $main-color: #48ECC0;
 $secondary-color: #FFFFFF;
 $text-color: #DEE3FF;
 $title-color: #FEFEFF;
+$content-color:#fff;
 
 /** mixin */
 @mixin box-shadow { 
