--- a/packages/front/src/page/datacollect/video/style.scss
+++ b/packages/front/src/page/datacollect/video/style.scss
@@ -1,7 +1,7 @@
 @import "~video-react/styles/scss/video-react";
 
 .video-react.video-react-fluid, .video-react.video-react-16-9, .video-react.video-react-4-3{
-  // height: $screen-height;
+  height: $screen-height;
 }
 
 .video-react{
