--- a/packages/front/src/page/datacollect/map/style.module.scss
+++ b/packages/front/src/page/datacollect/map/style.module.scss
@@ -1,4 +1,98 @@
 .container{
-  width: 945.5px * $multiple;
-  height: 679.5px * $multiple;
+  $right-lengend-width: 220px * $multiple;
+
+  height: $screen-height;
+  display: flex;
+  justify-content: stretch;
+
+  & > .right-legend{
+    flex: 0 0 $right-lengend-width;
+    margin: 30px * $multiple auto;
+    @include box-shadow;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    .item{
+      display: flex;
+      justify-content: stretch;
+      align-items: center;
+      padding: 25px;
+
+      // 选中状态
+      background-color: #0A0E22;
+      box-shadow: 0 0 14px * $multiple 0 rgba(18, 10, 28, 0.92);
+      border-radius: 42px * $multiple;
+
+      .icon{
+        width: 77px  * $multiple;
+        height: 77.5px  * $multiple;
+        background:red;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .desc{
+        padding-left: 10px;
+        h4{
+          font-size: 28px * $multiple;
+          color:$content-color;
+          margin: 0;
+        }
+        p{
+          color:$main-color;
+          margin:10px 0 0;
+        }
+      }
+    }
+  }
+
+  & > .map{
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+
+    .svg{
+      flex: 1 1 auto;
+      position: relative;
+      
+      .tip{
+        position: absolute;
+        z-index: 1;
+        right: 40px * $multiple;
+        bottom: 20px * $multiple;
+        color:#fff;
+
+        li{
+          $colors: rgba(255, 60, 104, 1), rgba(34, 228, 158, 1), rgba(102, 46, 172, 1), rgba(255, 60, 104, 1), rgba(0, 127, 255, 1);
+          
+          &:before{
+            content: '';
+            width:18px * $multiple;
+            height:18px * $multiple;
+            border-radius: 4px;
+            display: inline-block;
+            margin-right: 10px * $multiple;
+            vertical-align: middle;
+          }
+          
+          @for $index from 1 to length($colors) + 1 {
+            &:nth-child(#{$index}){
+              &:before{
+                background-color: nth($colors, $index);
+              }
+            }
+          }
+        }
+      }
+    }
+    .bottom-legend{
+      height: 158px * $multiple;
+      margin: 0 17.5px * $multiple;
+      @include box-shadow;
+    }
+  }
 }
