--- a/packages/front/src/components/nav/style.module.scss
+++ b/packages/front/src/components/nav/style.module.scss
@@ -14,7 +14,7 @@
     background-image: linear-gradient(to right, #1B605C, #142738);
     &:before{
       content:'';
-      width: 26.3px * $multiple;
+      width: 6px;
       height: 100%;
       display: block;
       position: absolute;
