--- a/packages/front/src/components/style/theme.scss
+++ b/packages/front/src/components/style/theme.scss
@@ -34,6 +34,13 @@ $content-color:#fff;
   height: $height * $multiple;
   @include box-shadow;
 }
+@mixin size($width, $height) {
+  width: $width * $multiple;
+  height: $height * $multiple;
+}
+@mixin squre($value) {
+  @include size($value, $value);
+}
 
 *{
   box-sizing: border-box;
