--- a/packages/front/src/components/mpc/style.module.scss
+++ b/packages/front/src/components/mpc/style.module.scss
@@ -5,9 +5,9 @@
   justify-content: space-around;
   align-items: center;
   box-shadow: 0px 0px 400px * $multiple 0px rgba(0, 0, 0, 1);
-  // background-color: #212953;
-  // #151a37
   background-image:linear-gradient(#151a37 0%, #212953 50%, #151a37 100%);
+  font-size: 27px * $multiple;
+
   &:after{
     content:'';
     display: block;
@@ -30,23 +30,27 @@
   }
 
   li{
+    text-align: center;
+    &.more{
+      font-size: 47px * $multiple;
+      color: rgba(22, 238, 157, 1);
+    }
+
     &:nth-child(1){
       font-style: italic;
-      font-size: 18px * $multiple;
       font-weight: bold;
       color: $main-color;
       padding-bottom: 25px * $multiple;
       border-bottom: 1px solid #fff;
     }
-
     // 2-4 有 icon
     $icons: './traffice.svg', './car.svg', './mobile.svg';
     @for $index from 1 to 4 {
       &:nth-child(#{$index + 1}){
         &:before{
           content:'';
-          @include squre(36.5px);
-          margin: 0 auto;
+          @include squre(63.3px);
+          margin: 0 auto 10px;
           display: block;
           background: url(nth($icons, $index)) no-repeat center;
           background-size: 100%;
