--- a/packages/front/src/page/trafficindex/map/style.module.scss
+++ b/packages/front/src/page/trafficindex/map/style.module.scss
@@ -5,8 +5,12 @@
   flex-direction: column;
   justify-content: center;
 
-  img{
-    height: 100%;// ???? 写动画的时候再改
+  .map{
+    height: 100%;
+    svg{
+      height: 100%;
+      width: 100%;
+    }
   }
   .title{
     text-align: center;
