--- a/packages/front/src/page/enterpriseland/land/style.module.scss
+++ b/packages/front/src/page/enterpriseland/land/style.module.scss
@@ -9,7 +9,13 @@
     height: 50%;
   }
 
+  .map{
+    padding-bottom: 12.5px;
+  }
+
   .echarts{
+    padding-top: 12.5px;
+    
     display: flex;
     justify-content: space-between;
     align-items: stretch;
