--- a/packages/front/src/page/enterpriseland/economic/title/style.module.scss
+++ b/packages/front/src/page/enterpriseland/economic/title/style.module.scss
@@ -1,10 +1,12 @@
+$background-image: linear-gradient(to right, $background-black 0, $main-color 50%, $background-black 100%);
+
 .title{
   font-size: 32px * $multiple;
   line-height: 54px * $multiple;
   margin: 0;
   padding: 0;
   text-align: center;
-  background-image: linear-gradient(to right, $background-black 0, $main-color 50%, $background-black 100%);
+  background-image: $background-image;
   position: relative;
   
   &:before, &:after{
@@ -15,7 +17,7 @@
     content: '';
     display: block;
     height: 1px;
-    background-image: linear-gradient(to right, $background-black 0, $main-color 50%, $background-black 100%);
+    background-image: $background-image;
   }
   &:before{
     top: -3px;
