--- a/packages/front/src/page/enterpriseland/industry/map/style.module.scss
+++ b/packages/front/src/page/enterpriseland/industry/map/style.module.scss
@@ -1,10 +1,16 @@
 .container{
   display: flex;
   align-items: stretch;
+  height: 100%;
   
   .map{
     position: relative;
     flex: 1 1 auto;
+
+    svg{
+      width: 100%;
+      height: 100%;
+    }
     
     .title{
       position: absolute;
