--- a/packages/front/src/page/enterpriseland/industry/style.module.scss
+++ b/packages/front/src/page/enterpriseland/industry/style.module.scss
@@ -4,9 +4,14 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: stretch;
-    
+  
+  .map{
+    height: 50%;
+    padding-bottom: 25px;
+  }
   .echarts{
-    height: 100%;
+    height: 50%;
+    padding-top: 25px;
     display: flex;
     justify-content: space-between;
     align-items:stretch;
