--- a/packages/front/src/page/enterpriseland/land/map/style.module.scss
+++ b/packages/front/src/page/enterpriseland/land/map/style.module.scss
@@ -23,13 +23,21 @@
     }
   }
   .legend{
-    $colors: rgba(236, 203, 37, 1), 
-             rgba(255, 140, 22, 1),
-             rgba(148, 225, 26, 1),
-             rgba(1, 206, 160, 1),
-             rgba(0, 108, 255, 1), 
-             rgba(107, 0, 253, 1),
-             rgba(210, 51, 152, 1);
+    $colors: #D3B728, 
+             #F38E26,
+             #1A88E1,
+             #E3A46F,
+             #1CC699, 
+             #6266FD,
+             #779ABE,
+             #183E63,
+             #2BDCFE,
+             #912FF6,
+             #E02561,
+             #014332,
+             #014332,
+             #82CA3A,
+             #E03838;
     @include box-shadow;
 
     li{
