--- a/packages/front/src/page/enterpriseland/land/supply/style.module.scss
+++ b/packages/front/src/page/enterpriseland/land/supply/style.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  @include box-shadow;
   
   .react-echarts{
     height: 100%;
