--- a/packages/front/src/page/enterpriseland/land/supply/style.module.scss
+++ b/packages/front/src/page/enterpriseland/land/supply/style.module.scss
@@ -1,10 +1,10 @@
 .container{
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  justify-content: space-between;
   @include box-shadow;
   
   .react-echarts{
-    height: 100%;
+    height: 80%;
   }
 }
