--- a/packages/front/src/page/datacollect/map/style.module.scss
+++ b/packages/front/src/page/datacollect/map/style.module.scss
@@ -1,63 +1,22 @@
 .container{
-  $right-lengend-width: 220px * $multiple;
-
-  height: $screen-height;
+  height: 100%;
   display: flex;
   justify-content: stretch;
 
-  & > .right-legend{
-    flex: 0 0 $right-lengend-width;
-    margin: 30px * $multiple auto;
-    @include box-shadow;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-
-    .item{
-      display: flex;
-      justify-content: stretch;
-      align-items: center;
-      padding: 25px;
-
-      // 选中状态
-      background-color: #0A0E22;
-      box-shadow: 0 0 14px * $multiple 0 rgba(18, 10, 28, 0.92);
-      border-radius: 42px * $multiple;
-
-      .icon{
-        width: 77px  * $multiple;
-        height: 77.5px  * $multiple;
-        background:red;
-        img{
-          width: 100%;
-          height: 100%;
-        }
-      }
-      .desc{
-        padding-left: 10px;
-        h4{
-          font-size: 28px * $multiple;
-          color:$content-color;
-          margin: 0;
-        }
-        p{
-          color:$main-color;
-          margin:10px 0 0;
-        }
-      }
-    }
-  }
-
   & > .map{
-    flex: auto;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
+    align-items: stretch;
 
-    .svg{
+    .svg-map{
+      height: 100%;
       flex: 1 1 auto;
       position: relative;
+      .svg{
+        width: 100%;
+        height: 100%;
+      }
       
       .tip{
         position: absolute;
@@ -89,10 +48,47 @@
         }
       }
     }
-    .bottom-legend{
-      height: 158px * $multiple;
-      margin: 0 17.5px * $multiple;
-      @include box-shadow;
+  }
+
+  & > .right-legend{
+    @include box-shadow;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    .item{
+      width: 600px * $multiple;
+      display: flex;
+      justify-content: stretch;
+      align-items: center;
+      padding: 15px;
+
+      // 选中状态
+      // background-color: #0A0E22;
+      // box-shadow: 0 0 14px * $multiple 0 rgba(18, 10, 28, 0.92);
+      // border-radius: 42px * $multiple;
+
+      .icon{
+        width: 154px  * $multiple;
+        height: 155px  * $multiple;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .desc{
+        padding-left: 10px;
+        h4{
+          font-size: 28px * $multiple;
+          color:$content-color;
+          margin: 0;
+        }
+        p{
+          color:$main-color;
+          margin:10px 0 0;
+        }
+      }
     }
   }
 }
