--- a/packages/front/src/page/enterpriseland/economic/style.module.scss
+++ b/packages/front/src/page/enterpriseland/economic/style.module.scss
@@ -15,7 +15,7 @@ $averageLeft: (100% - $height) / 2;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  align-items: start;
+  align-items: flex-start;
 
   & > *{
     width: 100%;
