--- a/packages/front/src/page/enterpriseland/economic/title/style.module.scss
+++ b/packages/front/src/page/enterpriseland/economic/title/style.module.scss
@@ -1,4 +1,4 @@
-$background-image: linear-gradient(to right, $background-black 0, $main-color 50%, $background-black 100%);
+$background-image: linear-gradient(to right, $background-black 0, rgba(27, 97, 92, 1) 50%, $background-black 100%);
 
 .title{
   font-size: 32px * $multiple;
