--- a/packages/front/src/components/mpc/style.module.scss
+++ b/packages/front/src/components/mpc/style.module.scss
@@ -7,6 +7,7 @@
   box-shadow: 0px 0px 400px * $multiple 0px rgba(0, 0, 0, 1);
   background-image:linear-gradient(#151a37 0%, #212953 50%, #151a37 100%);
   font-size: 27px * $multiple;
+  overflow: hidden;
 
   &:after{
     content:'';
