--- a/packages/front/src/page/datacollect/map/style.module.scss
+++ b/packages/front/src/page/datacollect/map/style.module.scss
@@ -4,6 +4,7 @@
   justify-content: stretch;
 
   & > .map{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
@@ -27,18 +28,49 @@
 
         li{
           $colors: rgba(255, 60, 104, 1), rgba(34, 228, 158, 1), rgba(102, 46, 172, 1), rgba(255, 60, 104, 1), rgba(0, 127, 255, 1);
+          position: relative;
           
           &:before{
             content: '';
-            width:18px * $multiple;
-            height:18px * $multiple;
-            border-radius: 4px;
+            width:35px * $multiple;
+            height:35px * $multiple;
+            border-radius: 8px * $multiple;
             display: inline-block;
-            margin-right: 10px * $multiple;
+            margin-right: 20px * $multiple;
             vertical-align: middle;
           }
           
-          @for $index from 1 to length($colors) + 1 {
+          &:nth-child(1){
+            padding-left: (35px + 20px + 5px) * $multiple;
+            &:before{
+              width: 25px * $multiple;
+              height: 25px * $multiple;
+              border-radius: 50%;
+              background-color: white;
+              border: 5px * $multiple solid red;
+              position: absolute;
+              z-index: 1;
+              top: 50%;
+              left: 0;
+              transform: translateY(-50%);
+            }
+
+            &:after {
+              content:'';
+              display:block;
+              border-width: 20px * $multiple 15px * $multiple 0;
+              border-color: red transparent transparent;
+              border-style: solid;
+              position: absolute;
+              z-index: 1;
+              top: 50%;
+              transform: translateY(-50%);
+              left: ((25px + 5px * 2) / 2 - 15px)  * $multiple;
+              margin-top: ((25px + 5px * 2 + 20px) / 2 - 5px) * $multiple;
+            }
+          }
+
+          @for $index from 2 to length($colors) + 1 {
             &:nth-child(#{$index}){
               &:before{
                 background-color: nth($colors, $index);
@@ -52,41 +84,48 @@
 
   & > .right-legend{
     @include box-shadow;
+    background-color: #0A0E22;
 
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    padding: 0 10px;
 
-    .item{
-      width: 600px * $multiple;
-      display: flex;
-      justify-content: stretch;
-      align-items: center;
-      padding: 15px;
-
-      // 选中状态
-      // background-color: #0A0E22;
-      // box-shadow: 0 0 14px * $multiple 0 rgba(18, 10, 28, 0.92);
-      // border-radius: 42px * $multiple;
-
-      .icon{
-        width: 154px  * $multiple;
-        height: 155px  * $multiple;
-        img{
-          width: 100%;
-          height: 100%;
+    li{
+      &.able{
+        cursor: pointer;
+        &.selected, &:hover{
+          background-color: $box-black;
+          box-shadow: 0 0 14px * $multiple 0 rgba(18, 10, 28, 0.92);
+          border-radius: 42px * $multiple;
         }
       }
-      .desc{
-        padding-left: 10px;
-        h4{
-          font-size: 28px * $multiple;
-          color:$content-color;
-          margin: 0;
+      .item{
+        width: 600px * $multiple;
+        display: flex;
+        justify-content: stretch;
+        align-items: center;
+        padding: 15px;
+  
+        .icon{
+          width: 154px  * $multiple;
+          height: 155px  * $multiple;
+          img{
+            width: 100%;
+            height: 100%;
+          }
         }
-        p{
-          color:$main-color;
-          margin:10px 0 0;
+        .desc{
+          padding-left: 10px;
+          h4{
+            font-size: 28px * $multiple;
+            color:$content-color;
+            margin: 0;
+          }
+          p{
+            color:$main-color;
+            margin:10px 0 0;
+          }
         }
       }
     }
