--- a/packages/front/src/page/enterpriseland/economic/style.module.scss
+++ b/packages/front/src/page/enterpriseland/economic/style.module.scss
@@ -56,6 +56,7 @@ $averageLeft: (100% - $height) / 2;
   justify-content: space-between;
 
   .echarts{
-    flex: 0 0 100%;// 强制固定 echarts 的高度
+    flex: 0 0 100%;
+    padding: 0 15px;
   }
 }
